change name and try to make clear function